--- a/index.html
+++ b/index.html
@@ -8,17 +8,44 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- CSS de Bootstrap -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <style>
+            .bg-gray{
+                background: #E9ECEF;
+                border-radius: 10%;
+            }
+            .mx-6 {
+            margin-right: 8rem !important;
+            margin-left: 8rem !important;
+            }
+        </style>
     </head>
 
     <body>
 
-        <h1 id="autor">Autor: Sergio Cobos</h1>
+        <h1 id="autor" class="container mx-auto">Autor: Sergio Cobos</h1>
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
+            <div class="">
+                
+            </div>
+            <div class="mx-auto container">
+                <div class="mt-5 p-5 bg-gray text-black rounded mx-auto">
+                    <h1 id=title>{{ col.collection.title }}</h1>
+                </div>
+            </div>
+            <div class="row m-0 my-4 container mx-auto">
+                <div class="card col-lg-4 col-12 mx-auto my-4" v-for="elemento in col.collection.items">
+                    <div class="card-body">
+                        <dl class="my-4" v-for="movie in elemento.data">
+                            <dt>{{movie.prompt}}</dt>
+                            <dd>{{movie.value}}</dd>
+                        </dl>
+                        <a class="btn btn-primary" :href="elemento.href">Ver</a>
+                    </div>
+                </div>
+            </div>
             <!--
                  TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
                - Cargar la librería de VueJS y el script ./js/script.js al final de la etiqueta <body>
@@ -31,13 +58,8 @@
                    - El término <dt> será la propiedad "prompt"
                    - La definición <dd> será la propiedad "value"
             -->
-                <p>{{ col.collection.title }}</p>
-            <div class="row">
-                <div class="col" v-for="i in col.">
-
-                </div>
-            </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="./js/script.js"></script>
 
