--- a/index.html
+++ b/index.html
@@ -14,23 +14,19 @@
                 background: #E9ECEF;
                 border-radius: 10%;
             }
-            .mx-6 {
-            margin-right: 8rem !important;
-            margin-left: 8rem !important;
-            }
         </style>
     </head>
 
     <body>
 
-        <h1 id="autor" class="container mx-auto">Autor: Sergio Cobos</h1>
+        <h1 id="autor" class="container-fluid mx-auto">Autor: Sergio Cobos</h1>
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
             <div class="">
                 
             </div>
-            <div class="mx-auto container">
+            <div class="mx-auto container-fluid">
                 <div class="mt-5 p-5 bg-gray text-black rounded mx-auto">
                     <h1 id=title>{{ col.collection.title }}</h1>
                 </div>
