--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
             </div>
             <div class="mx-auto container-fluid">
-                <div class="mt-5 p-5 bg-gray text-black rounded mx-auto">
+                <div class="mt-5 p-5 bg-gray text-black rounded mx-auto jumbotron">
                     <h1 id=title>{{ col.collection.title }}</h1>
                 </div>
             </div>
